# ssh-clipboard

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.rst
src/: CMakeLists.txt  clipboard.h  config.cc  config.h  listener.h  mac_event_loop.h  main.cc  posix_listener.cc  posix_listener.h  ssh_clipboard.cc  ssh_clipboard.h
src/linux/: CMakeLists.txt
src/mac/: CMakeLists.txt  mac_clipboard.h  mac_clipboard.mm  mac_clipboard.test.cc
src/ssh_clipboard/: BUILD.bazel
src/ssh_clipboard/clipboard/: BUILD.bazel  clipboard_interface.cc  clipboard_interface.h
src/ssh_clipboard/event_loop/: BUILD.bazel  event_loop.cc  event_loop.h  event_loop_test.cc  linux_event_loop.cc  linux_event_loop.h  mac_event_loop.cc  mac_event_loop.h  mac_event_loop_test.cc
src/ssh_clipboard/mac_clipboard/: BUILD.bazel  mac_clipboard_access.cc  mac_clipboard_access.h  mac_clipboard_access_test.cc  native_clipboard_access.swift
src/windows/: CMakeLists.txt  keyboard_emulator.cc  keyboard_emulator.h  tray_paste.cc  win32_utils.hpp  windows_clipboard_impl.cc  windows_clipboard_impl.h
tests/: CMakeLists.txt
