module(
    name = "ssh_clipboard",
    compatibility_level = 1,
    repo_name = "com_github_proprietary_ssh_clipboard",
    version = "0.0.1-dev"
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "abseil-cpp", version = "20250127.0")
bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "google_benchmark", version = "1.9.1")
bazel_dep(name = "rules_swift", version = "2.5.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

archive_override(
    module_name = "hedron_compile_commands",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/4f28899228fb3ad0126897876f147ca15026151e.zip",
    integrity = "sha256-yAKektowLwoy/Q1AWTWMhle1y4JigAC3teJZxz+RiC0=",
    strip_prefix = "bazel-compile-commands-extractor-4f28899228fb3ad0126897876f147ca15026151e",
)
